learning-history/day-21-ingress-deep-dive/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app1-service
  name: app1-service
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app1-service
  type: ClusterIP
status:
  loadBalancer: {}
