learning-history/day-21-ingress-deep-dive/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: day21-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: app1-service
            port:
              number: 80
        path: /app1
        pathType: Prefix
      - backend:
          service:
            name: app2-service
            port:
              number: 80
        path: /app2
        pathType: Prefix    
status:
  loadBalancer: {}
